--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -3,7 +3,7 @@ on: push
 jobs:
   test:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/head/main' || startsWith(github.ref, 'refs/tags')
+    if: github.ref == 'refs/head/main' 
     steps:
       - uses: actions/checkout@v4.1.1
       - name: Run Unit Tests
