--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -3,7 +3,12 @@ on: push
 jobs:
   test:
     runs-on: ubuntu-latest
+    container: golang:1.21
     steps:
-      - uses: actions/checkout@v3 
-        name: Run Unit Tests
+      - name: Run Unit Tests
+      - uses: actions/checkout@v2 
         run: GOOS=linux GOARCH=amd64 go test
+
+      - name: Vet
+        run: |
+          go vet ./...
