--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -19,8 +19,11 @@ jobs:
     needs: test
     if: startsWith(github.ref, 'refs/tags')
     steps:
+      - name: Set up Docker buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Log in to Docker Hub
-        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
@@ -32,10 +35,10 @@ jobs:
           images: lekanpvp/hello-golang
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+        uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
-
+          labels: ${{ steps.meta.outputs.labels }}
