--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -37,6 +37,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
+          file: ./Dockerfile
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
