--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     container: golang:1.22
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Run Unit Tests
         run: GOOS=linux GOARCH=amd64 go test
 
@@ -19,6 +19,9 @@ jobs:
     needs: test
     if: startsWith(github.ref, 'refs/tags')
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Set up Docker buildx
         uses: docker/setup-buildx-action@v3
 
@@ -35,10 +38,9 @@ jobs:
           images: lekanpvp/hello-golang
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v5
         with:
           context: .
-          file: Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
