--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Extract metadata (tags) for Docker
         id: meta
-        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        uses: docker/metadata-action@v5.5.1
         with:
           images: lekanpvp/hello-golang
 
